// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action render() should render a warning about potential page deactivation in Facebook 1`] = `
<div
  className="Action d-flex align-items-baseline"
  style={
    Object {
      "paddingLeft": "NaNpx",
    }
  }
>
  <ActionSelect
    parent={1}
    value="facebookHideComment"
  />
  <span
    className="alert-warning"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
      }
    }
  >
    An extensive use of automatic Facebook actions may deactivate your page on Facebook!
  </span>
</div>
`;

exports[`Action render() should render a warning about potential page deactivation in Facebook 2`] = `
<div
  className="Action d-flex align-items-baseline"
  style={
    Object {
      "paddingLeft": "NaNpx",
    }
  }
>
  <ActionSelect
    parent={2}
    value="facebookLikeComment"
  />
  <span
    className="alert-warning"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
      }
    }
  >
    An extensive use of automatic Facebook actions may deactivate your page on Facebook!
  </span>
</div>
`;

exports[`Action render() should render an error saying an action cannot be empty 1`] = `
<div
  className="Action"
  style={
    Object {
      "paddingLeft": "NaNpx",
    }
  }
>
  <ActionSelect
    parent={3}
    value=""
  />
  <Errors
    belowInput={false}
    inline={true}
    tag="div"
  >
    An action cannot be empty
  </Errors>
</div>
`;
